2013-03-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/openvassd.c (main): Don't initialize services
	(openvas_init_svc) anymore. It is not needed anymore because removed
	from openvas-libraries (see there for rationale).

2013-03-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	The port_range "default" is not allowed anymore. It is now
	mandatory that the client sends an explicit one.
	Ratonale: "default" is an intransparent behaviour from user
	perspective.

	* src/preferences.c (openvassd_option openvassd_defaults): Removed
	port_range from the default settings.

	* src/attack.c (attack_network): Check port_range directly as found in
	preferences. Don't assume "1-15000" in absense of port_range and don't
	consider port_range == "-1" as something valid.
 
2013-03-01  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* tools/greenbone-nvt-sync (RSYNC_DELETE): Remove quotes causing
	exclude of private directory to be ignored.

2013-02-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/comm.c (comm_send_nvti_info): Renamed OTP command
	"PLUGINS_MD5" to "NVT_INFO" which is more apropriate as
	no MD5 is handled at all anymore. The parameter is kept
	as static text "DUMMY".

2013-02-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/comm.c (comm_send_md5_plugins): Renamed to comm_send_nvt_info.

	* src/comm.h: Updated proto accordingly.

	* src/openvassd.c (scanner_thread): Renamed call accordingly.

2013-02-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Remove handling of MD5 for NVTs from OTP. Those checksums have
	no meaning to the client because the client can not verify
	them as it has no access to the actual NVT files.
	So, the MD5 could serve as version/change indicator at best, but
	that is already redundant with the revisioning in the tags.
	The MD5 checksums could be used to determine which plugins
	are changed since last contact (provided the client stores them)