@@ -1,3 +1,11 @@
+2013-03-02  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	* src/comm.c (plug_is_newstyle): New function to check if plugin has all
+	newly added tags (summary, affected, insight, detection, impact,
+	solution).
+	(send_plug_info): Send NODESC instead of whole description when plugin
+	has all new style tags.
+
 2013-03-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* src/openvassd.c (main): Don't initialize services
